Osa 3. Toinen tehtävä

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <meta charset="utf-8">
   <title>Lapio website</title>
 </head>
-
+<h1><b><strong>Seitsemän veljestä</strong><b></h1>
+<h3><b><strong>Ensimmäinen luku</strong><b></h1>
 <body>
   <!--Tee tehtävät tänne-->
+<p>Jukolan talo, eteläisessä Hämeessä, seisoo erään mäen pohjoisella rinteellä, liki Toukolan kylää.</p>
+<p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.<p>
+<i>jatkuu<i>
 </body>
 
 </html>
