Osa 3. Toinen tehtävä

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <title>Lapio website</title>
 </head>
-<h1><b><strong>Seitsemän veljestä</strong><b></h1>
-<h3><b><strong>Ensimmäinen luku</strong><b></h1>
+<h1><b>Seitsemän veljestä</b></h1>
+<h3><b>Ensimmäinen luku</b></h3>
 <body>
   <!--Tee tehtävät tänne-->
-<p>Jukolan talo, eteläisessä Hämeessä, seisoo erään mäen pohjoisella rinteellä, liki Toukolan kylää.</p>
+<p><b>Jukolan talo</b>, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä, liki <i>Toukolan kylää</i>.</p>
 <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.<p>
-<i>jatkuu<i>
+<i>jatkuu</i>
 </body>
 
 </html>
