Osa 3. Kolmas tehtävä

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h3><b>Ensimmäinen luku</b></h3>
 <body>
   <!--Tee tehtävät tänne-->
-<p><b>Jukolan talo</b>, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä, liki <i>Toukolan kylää</i>.</p>
+<p><b>Jukolan talo</b>, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä, liki <i><b>Toukolan kylää</b></i>.</p>
 <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.<p>
 <i>jatkuu</i>
 </body>
